k8s/clusters/production/apps/nongkee-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nongkee-be
spec:
  selector:
    matchLabels:
      app: nongkee-be
  template:
    metadata:
      labels:
        app: nongkee-be
    spec:
      imagePullSecrets:
        - name: regcred-rifqoi-registry-com
      containers:
        - name: nongkee-be
          image: registry.rifqoi.com/nongkee-be:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: google-sa-config-json
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: google-sa-config-json
          secret:
            secretName: nongkee-be-secret
            items:
              - key: SERVICE_ACCOUNT_JSON
                path: config.json
