k8s/clusters/production/apps/nongkee-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nongkee-be
spec:
  selector:
    app: nongkee-be
  ports:
    - port: 8080
      targetPort: 8080
