k8s/clusters/production/apps/nongkee-be/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nongkee-be
spec:
  parentRefs:
    - name: nongkee-be-gw
  hostnames:
    - api-dev.nongkee.id
  rules:
    - backendRefs:
        - name: nongkee-be
          port: 8080
